@@ -1,3 +1,9 @@
+Development Portal (2024-07-11 shi)
+==============================
+Add SDG to main section
+Print-friendly css fixes
+
+
 Development Portal (2024-06-16 shi)
 ==============================
 Updated link to IATI Publishing Guidance in glossary
